--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+    height: 100%;
+}
+
+html {
+    font-size: 100%;
+}
+
+body {
+    background: transparent url(/background-mini.jpg) center center;
+}
+
+@layer components {
+    .main-col {
+        background-color: #36373C;
+        box-shadow: 0 0 10px 16px #00000080;
+        @apply grid relative mx-auto max-w-[80rem] overflow-x-clip;
+    }
+}
