--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -20,10 +20,23 @@ body {
 
 @layer components {
     .main-col {
+        position: relative;
         background-color: #36373C;
-        background-image: url(/pattern-overlay.jpg);
+        background-size: contain;
         box-shadow: 0 0 10px 16px #00000080;
         
         @apply grid relative mx-auto max-w-[80rem] overflow-x-clip;
+    }
+
+    .main-col::before {
+        content: '';
+        background-image: url(/dots.png);
+
+        @apply absolute inset-0 pointer-events-none opacity-50 z-0 bg-contain -scale-x-100 rotate-6;
+    }
+
+    .main-content {
+        position: relative;
+        z-index: 10;
     }
 }
